--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>와쿠와쿠 회원가입</title>
     <link rel="stylesheet" href="./css/comm.css">
 </head>
 <body>
@@ -18,20 +18,24 @@
         </nav>
     </header>
     <main>
-        <h2>로그인 및 회원가입</h2>
+        <h2>회원가입 이용약관</h2>
         <form action="">
-            <input name="" id="" placeholder="휴대폰 또는 이메일 입력">
-            <input name="" id="" placeholder="비밀번호 입력">
-            <input type="checkbox" name="" id="">로그인 상태 유지
+            <input type="checkbox" name="" id="">전체 동의하기
+            <p>여러분을 환영합니다.</p>
+            <p>실명 인증된 아이디로 가입, 위치기반서비스 이용약관(선택), 이벤트・혜택 정보 수신(선택) 동의를 포함합니다.</p>
+            <input type="checkbox" name="" id="">[필수] 와쿠와쿠 이용약관
+            <p>여러분을 환영합니다.</p>
+            <p>실명 인증된 아이디로 가입, 위치기반서비스 이용약관(선택), 이벤트・혜택 정보 수신(선택) 동의를 포함합니다.</p>
+            <input type="checkbox" name="" id="">[필수] 전체 동의하기
+            <p>여러분을 환영합니다.</p>
+            <p>실명 인증된 아이디로 가입, 위치기반서비스 이용약관(선택), 이벤트・혜택 정보 수신(선택) 동의를 포함합니다.</p>
+            <input type="checkbox" name="" id="">[선택] 위치기반서비스 이용약관
+            <p>여러분을 환영합니다.</p>
+            <p>실명 인증된 아이디로 가입, 위치기반서비스 이용약관(선택), 이벤트・혜택 정보 수신(선택) 동의를 포함합니다.</p>
+            <input type="checkbox" name="" id="">[선택] 개인정보 수집 및 이용
+            <p>이벤트 ・ 혜택정보 수신</p>
         </form>
-        <button>로그인</button>
-        <button>네이버로 로그인</button>
-        <button>구글로 로그인</button>
-        <ul>
-            <li><a href="#">비밀번호 찾기</a></li>
-            <li><a href="#">아이디 찾기</a></li>
-            <li><a href="#">회원가입</a></li>
-        </ul>
+        <button>다음</button>
     </main>
     <footer>
         <div>
