--- a/login.html
+++ b/login.html
@@ -17,6 +17,12 @@
             </ul>
         </nav>
     </header>
+    <aside>
+        <div>
+            <a href="#">상담하기</a>
+            <a href="#">위로가기</a>
+        </div>
+    </aside>
     <main>
         <h2>로그인 및 회원가입</h2>
         <form action="">
