--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>''
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,6 +28,12 @@
             </ul>
         </nav>
     </header>
+    <aside>
+        <div>
+            <a href="#">상담하기</a>
+            <a href="#">위로가기</a>
+        </div>
+    </aside>
     <main>
         <section id="title">
             <h2 class="hidden">title</h2>
