--- a/gon.html
+++ b/gon.html
@@ -25,6 +25,12 @@
             </ul>
         </nav>
     </header>
+    <aside>
+        <div>
+            <a href="#">상담하기</a>
+            <a href="#">위로가기</a>
+        </div>
+    </aside>
     <main id="main">
         <h2>공지사항</h2>
         <ul class="notice">
