--- a/faq.html
+++ b/faq.html
@@ -3,44 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <title>faq</title>
+    <link rel="stylesheet" href="./faq_css/comm.css">
+    <script src="./jquery-3.7.1.js"></script>
+    <script src="./faq_js/faq.js"></script>
 </head>
 <body>
     <header id="header">
-        <h1 class="hideText">logo</h1>
+        <hgroup id="mobileHeader">
+            <h1 class="hideText">프로필편집</h1>
+            <a href="#" class="hideText">menuBar</a>
+        </hgroup>
         <nav id="gnb">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">filter</a></li>
-                <li><a href="#">store</a></li>
-                <li><a href="#">community</a></li>
-                <li><a href="#">my page</a></li>
+                <li><a href="./main.html">home</a></li>
+                <li><a href="./sub.html">filter</a></li>
+                <li><a href="./sub.html">store</a></li>
+                <li><a href="./gon.html">community</a></li>
+                <li><a href="./propyl.html">my page</a></li>
             </ul>
         </nav>
         <nav id="snb">
+            <h2 id="h_mo">community</h2>
             <ul>
-                <li><a href="#">공지사항</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="./gon.html">공지사항</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h2>공지사항</h2>
-        <ul>
-            <li><a href="#"><span>01.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2012-11-16</span></li>
-            <li><a href="#"><span>02.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2016-10-16</span></li>
-            <li><a href="#"><span>03.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2015-15-16</span></li>
-            <li><a href="#"><span>04.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2024-13-16</span></li>
-            <li><a href="#"><span>05.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2024-13-17</span></li>
-            <li><a href="#"><span>06.</span>비즈니스 채널 신청 및 전환이 되면 아래 경로를 통해 배경색을 지정</a><span>2024-13-18</span></li>
+    <main id="main">
+        <h2 id="h_p">faq</h2>
+        <div id="such_mo">
+            <p>무엇을 도와드릴까요?</p>
+            <img src="./image/sub_aside/sut_mo.png" alt="돋보기">
+        </div>
+        <ul class="faq">
+            <li>
+                <a href="#">
+                    <span class="frist">Q.</span>
+                    <span class="middle">평가 승인은 언제 처리되나요?</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="a">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
+            <li>
+                <a href="#">
+                    <span  class="frist">Q.</span>
+                    <span class="middle">홍보성 평가의 처리는 어떻게 되나요?</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="a">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
+            <li>
+                <a href="#">
+                    <span  class="frist">Q.</span>
+                    <span class="middle">평가가 승인되었는데, 포인트 적립이 되지 않아요.</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="a">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
+            <li>
+                <a href="#">
+                    <span  class="frist">Q.</span>
+                    <span class="middle">부분승인이 무엇인가요?</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="q">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
+            <li>
+                <a href="#">
+                    <span  class="frist">Q.</span>
+                    <span class="middle">반려/숨김된 평가도 수정이 가능한가요?</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="q">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
+            <li>
+                <a href="#">
+                    <span  class="frist" >Q.</span>
+                    <span class="middle">평가를 삭제하고 싶어요.</span>
+                    <span class="icon"></span>
+                </a>
+                <div class="answer">
+                    <span class="a">A.</span>
+                    <p>답변입니다.</p>
+                </div>
+            </li>
         </ul>
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-        </ul>
+        <div class="sutch">
+            <form action="gat" method="get">
+                <select name="date" id="wdate">
+                    <option value="">전체</option>
+                    <option value="">지난 1주</option>
+                    <option value="">지난 1개월</option>
+                    <option value="">지난 1년</option>
+                </select>
+                <select name="sel1" id="sel">
+                    <option value="">전체</option>
+                    <option value="">제목</option>
+                    <option value="">내용</option>
+                </select>
+                <input type="text" placeholder="검색어 입력">
+                <button>검색</button>
+            </form>
+        </div>
     </main>
-    <footer>
+      <footer id="footer_mo">
+        <ul class="sns">
+            <li><a href="#" class="hideText">instagram</a></li>
+            <li><a href="#" class="hideText">facebook</a></li>
+            <li><a href="#" class="hideText">X</a></li>
+        </ul>
+        <div>
+            <a href="#">회사 소개&nbsp|</a>
+            <a href="#">서비스 소개&nbsp|</a>
+            <a href="#">광고 및 제휴&nbsp|</a>
+            <a href="#">와쿠와쿠&nbsp|</a>
+            <a href="#">개인정보처리방침&nbsp|</a>
+            <a href="#">이용약관&nbsp|</a>
+            <a href="#">도움말&nbsp|</a>
+            <a href="#">공지사항&nbsp|</a>
+            <a href="#">채용정보</a>
+        </div>
+        <p> (주)와쿠와쿠 | 대표이사: 정민경 | 이사장: 이지현 | 회장: 이창수</p>
+        <address> 사업자등록번호: 010-8556-7052 | TEL 010-2416-9104 | FAX 010-6326-7993 | EMAIL catgkdntm@naver.com</address>
+        
+    </footer>
+    <footer id="footer">
         <div>
             <a href="#">회사 소개&nbsp|</a>
             <a href="#">서비스 소개&nbsp|</a>
@@ -55,9 +159,9 @@
         <p> (주)와쿠와쿠 | 대표이사: 정민경 | 이사장: 이지현 | 회장: 이창수</p>
         <address> 사업자등록번호: 010-8556-7052 | TEL 010-2416-9104 | FAX 010-6326-7993 | EMAIL catgkdntm@naver.com</address>
         <ul class="sns">
-            <li><a href="#">instagram</a></li>
-            <li><a href="#">facebook</a></li>
-            <li><a href="#">X</a></li>
+            <li><a href="#" class="hideText">instagram</a></li>
+            <li><a href="#" class="hideText">facebook</a></li>
+            <li><a href="#" class="hideText">X</a></li>
         </ul>
     </footer>
 </body>
