--- a/login.html
+++ b/login.html
@@ -3,37 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-    <link rel="stylesheet" href="./css/comm.css">
+    <title>id/password</title>
+    <link rel="stylesheet" href="./css/subFooter.css">
+    <link rel="stylesheet" href="./login_css/login_comm.css">
 </head>
 <body>
     <header id="header">
         <h1 class="hideText">logo</h1>
-        <nav id="lang">
-            <ul>
-                <li><a href="#">한국어</a></li>
-                <li><a href="#">영어</a></li>
-                <li><a href="#">일본어</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>로그인 및 회원가입</h2>
-        <form action="">
-            <input name="" id="" placeholder="휴대폰 또는 이메일 입력">
-            <input name="" id="" placeholder="비밀번호 입력">
-            <input type="checkbox" name="" id="">로그인 상태 유지
+        <form id="langBox">
+            <select name="languages" id="lang">
+                <option value="kr">한국어</option>
+                <option value="eg">영어</option>
+                <option value="ja">일본어</option>
+            </select>
         </form>
-        <button>로그인</button>
-        <button>네이버로 로그인</button>
-        <button>구글로 로그인</button>
-        <ul>
-            <li><a href="#">비밀번호 찾기</a></li>
-            <li><a href="#">아이디 찾기</a></li>
-            <li><a href="#">회원가입</a></li>
-        </ul>
+    </header>
+    <main id="user">
+        <h2>아이디 찾기 / 비밀번호 재설정</h2>
+        <form action="uer" id="membership">
+            <input type="text" placeholder="휴대폰 또는 이메일 입력">
+            <input type="password" id="pass" placeholder="비밀번호 입력">
+            <input type="checkbox" name="situat1" id="chk_1"><label for="chk_1">로그인 상태 유지</label>
+        </form>
+        <button id="lo" onclick="location.href='./main.html'" >로그인</button>
+        <button id="naver" onclick="location.href='http://naver.com'">네이버로 로그인</button>
+        <button id="kakao" onclick="location.href='./main.html'">카카오로 로그인</button>
+        <div>
+            <p><a href="./idPass.html">비밀번호 찾기</a></p>
+            <p><a href="./idPass.html">아이디 찾기</a></p>
+            <p><a href="./join2.html">회원가입</a></p>
+        </div>
     </main>
-    <footer>
+    <footer id="footer">
         <div>
             <a href="#">회사 소개&nbsp|</a>
             <a href="#">서비스 소개&nbsp|</a>
@@ -48,9 +49,9 @@
         <p> (주)와쿠와쿠 | 대표이사: 정민경 | 이사장: 이지현 | 회장: 이창수</p>
         <address> 사업자등록번호: 010-8556-7052 | TEL 010-2416-9104 | FAX 010-6326-7993 | EMAIL catgkdntm@naver.com</address>
         <ul class="sns">
-            <li><a href="#">instagram</a></li>
-            <li><a href="#">facebook</a></li>
-            <li><a href="#">X</a></li>
+            <li><a href="#" class="hideText">instagram</a></li>
+            <li><a href="#" class="hideText">facebook</a></li>
+            <li><a href="#" class="hideText">X</a></li>
         </ul>
     </footer>
 </body>
